--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-body {
-  font-family: "Roboto", sans-serif;
-  color: #434455;
-  background-color: #ffffff;
-  margin: 0;
-}
-
 .team-member-info .social-media-icons {
   display: flex;
   justify-content: center;
@@ -313,10 +306,6 @@ body {
   fill: var(--icon-color, #f4f4fd);
 }
 
-.icon {
-  fill: var(--icon-color, #f4f4fd);
-}
-
 .team-member img {
   width: 100%;
   border-radius: 4px;
@@ -539,6 +528,53 @@ body {
   fill: var(--icon-color, #f4f4fd);
 }
 
+.subscribe-wrapper {
+  margin-left: 50px;
+}
+
+.subscribe-form {
+  display: flex;
+  gap: 24px;
+}
+
+.subscribe-text {
+  color: #fff;
+  font-weight: 500;
+  margin-bottom: 16px;
+}
+
+.subscribe-input {
+  width: 264px;
+  height: 40px;
+  border-radius: 4px;
+  font-size: 12px;
+  line-height: 2;
+  border: 1px solid white;
+  background-color: transparent;
+  color: #fff;
+  padding: 16px;
+}
+
+.subscribe-button {
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  color: #fff;
+  background-color: #4d5ae5;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  border: none;
+}
+
+.subscribe-icon {
+  margin-left: 16px;
+  fill: #fff;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -603,4 +639,153 @@ h2 {
 
 p {
   line-height: 1.6;
+}
+
+/* MODAL */
+
+.backdrop {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+.backdrop.is-open {
+  display: flex;
+}
+
+.modal {
+  background: white;
+  padding: 25px;
+  padding-top: 72px;
+  border-radius: 8px;
+  height: 584px;
+  width: 408px;
+  position: relative;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.modal-close {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  width: 24px;
+  height: 24px;
+  top: 24px;
+  right: 24px;
+}
+
+.modal-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.modal-label {
+  display: block;
+  margin-bottom: 4px;
+  font-size: 12px;
+}
+
+.modal-form-wrapper {
+  display: block;
+  margin-bottom: 8px;
+}
+
+.modal-form-input {
+  height: 40px;
+}
+
+.modal-form-input-wrapper {
+  position: relative;
+}
+
+.icon-modal {
+  position: absolute;
+  top: 22%;
+  left: 17px;
+}
+
+.modal-textarea-wrapper {
+  margin-bottom: 15px;
+}
+
+.modal-form-textarea {
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  padding: 8px 16px;
+}
+
+.modal-form input,
+.modal-form textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form input:focus,
+.modal-form textarea:focus {
+  border-color: #007bff;
+}
+
+.modal-checkbox-wrapper {
+  display: flex;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.48px;
+}
+
+.modal-policy-wrapper {
+  margin-bottom: 16px;
+}
+
+.custom-checkbox {
+  position: relative;
+  bottom: 3px;
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+}
+
+.modal-privacy-policy {
+  color: #4d5ae5;
+  text-decoration: underline solid;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.48px;
+  margin-left: 4px;
+}
+
+.modal-submit-button-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.submit-button {
+  background-color: #4d5ae5;
+  color: #fff;
+  border-radius: 4px;
+  border: none;
+  font-weight: 500;
+  width: 169px;
+  height: 56px;
 }
