--- a/css/style.css
+++ b/css/style.css
@@ -547,6 +547,8 @@ body {
 .subscribe-text {
   color: #fff;
   font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   margin-bottom: 16px;
 }
 
@@ -554,7 +556,9 @@ body {
   width: 264px;
   height: 40px;
   border-radius: 4px;
+  letter-spacing: 0.04em;
   font-size: 12px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   line-height: 2;
   border: 1px solid white;
   background-color: transparent;
@@ -570,6 +574,8 @@ body {
   align-items: center;
   font-weight: 500;
   letter-spacing: 0.04em;
+  line-height: 1.5;
+  cursor: pointer;
   color: #fff;
   background-color: #4d5ae5;
   border-radius: 4px;
