--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+:root {
+  --black: #2e2f42;
+  --grey: #8e8f99;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   color: #434455;
@@ -657,30 +662,32 @@ p {
 /* MODAL */
 
 .backdrop {
-  display: none;
   position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  justify-content: center;
-  align-items: center;
-}
-
-.backdrop.is-open {
-  display: flex;
+  inset: 0;
+  z-index: 2;
+  opacity: 0;
+  visibility: hidden;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
-  background: white;
-  padding: 25px;
-  padding-top: 72px;
-  border-radius: 8px;
-  height: 584px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-height: 584px;
+  background: #fcfcfc;
+  padding: 72px 24px 24px 24px;
   width: 408px;
-  position: relative;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translate(-50%, -50%);
 }
 
 .modal-close {
@@ -688,28 +695,60 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #e7e9fc;
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   width: 24px;
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   height: 24px;
   top: 24px;
   right: 24px;
+}
+
+.modal-close:hover {
+  background-color: #404bbf;
+  border: none;
+}
+
+.modal-close:focus {
+  background-color: #404bbf;
+  border: none;
+}
+
+.icon-modal-close {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-modal-close:hover {
+  fill: #ffffff;
+}
+.icon-modal-close:focus {
+  fill: #ffffff;
 }
 
 .modal-text {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  letter-spacing: 0.02em;
   margin-bottom: 16px;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
+  color: var(--black);
 }
 
 .modal-label {
   display: block;
   margin-bottom: 4px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
   font-size: 12px;
+  color: var(--grey);
 }
 
 .modal-form-wrapper {
@@ -718,17 +757,32 @@ p {
 }
 
 .modal-form-input {
+  background-color: transparent;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  padding-left: 38px;
   height: 40px;
+  outline: transparent;
+}
+
+.modal-form-input:focus {
+  border-color: #4d5ae5;
 }
 
 .modal-form-input-wrapper {
+  margin-bottom: 16px;
   position: relative;
 }
 
 .icon-modal {
   position: absolute;
-  top: 23%;
-  left: 17px;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus + .icon-modal {
+  fill: #4d5ae5;
 }
 
 .modal-textarea-wrapper {
@@ -737,10 +791,20 @@ p {
 
 .modal-form-textarea {
   height: 120px;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: transparent;
   font-size: 12px;
+  padding: 8px 16px;
+  outline: transparent;
+  resize: none;
   line-height: 1.17;
   letter-spacing: 0.04em;
   padding: 8px 16px;
+}
+
+.modal-form-textarea:focus {
+  border-color: #4d5ae5;
 }
 
 .modal-form input,
@@ -761,14 +825,19 @@ p {
   display: flex;
   font-size: 12px;
   line-height: 1.17;
-  letter-spacing: 0.48px;
+  letter-spacing: 0.04em;
+  color: var(--grey);
 }
 
 .modal-policy-wrapper {
-  margin-bottom: 16px;
+  margin-bottom: 24px;
 }
 
 .custom-checkbox {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
   position: relative;
   bottom: 3px;
   width: 16px;
@@ -794,11 +863,16 @@ p {
 }
 
 .submit-button {
+  font-family: "Roboto", sans-serif;
   background-color: #4d5ae5;
-  color: #fff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #ffffff;
+  cursor: pointer;
   border-radius: 4px;
   border: none;
   font-weight: 500;
-  width: 169px;
+  min-width: 169px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   height: 56px;
 }
