--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 :root {
   --black: #2e2f42;
   --grey: #8e8f99;
+  --purple: #404bbf;
+  --white: #f4f4fd;
 }
 
 body {
@@ -838,15 +840,25 @@ p {
   align-items: center;
   justify-content: center;
   fill: transparent;
-  position: relative;
   bottom: 3px;
   width: 16px;
   height: 16px;
   margin-right: 8px;
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.input:checked + label .custom-checkbox {
+  background-color: var(----purple);
+  border: none;
+}
+
+input:checked + label .custom-checkbox .icon-checkbox {
+  fill: var(--custom-fill-color, #f4f4fd);
+}
 .modal-privacy-policy {
   color: #4d5ae5;
   text-decoration: underline solid;
@@ -869,6 +881,8 @@ p {
   color: #ffffff;
   cursor: pointer;
   border-radius: 4px;
+  display: block;
+  margin: auto;
   border: none;
   font-weight: 500;
   min-width: 169px;
