--- a/css/style.css
+++ b/css/style.css
@@ -759,11 +759,19 @@ p {
 }
 
 .modal-form-input {
-  background-color: transparent;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  padding-left: 38px;
+  width: 100%;
   height: 40px;
+  padding-left: 38px;
+  background-color: transparent;
+  font-size: 18px;
+  letter-spacing: -0.02em;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
   outline: transparent;
+  box-shadow: 0px 5.445px 5.445px 0px rgba(0, 0, 0, 0.03);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: border-color;
+  color: rgba(46, 47, 66, 0.4);
 }
 
 .modal-form-input:focus {
@@ -792,6 +800,7 @@ p {
 }
 
 .modal-form-textarea {
+  width: 100%;
   height: 120px;
   color: rgba(46, 47, 66, 0.4);
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -807,15 +816,6 @@ p {
 
 .modal-form-textarea:focus {
   border-color: #4d5ae5;
-}
-
-.modal-form input,
-.modal-form textarea {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form input:focus,
@@ -851,9 +851,11 @@ p {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input:checked + label .custom-checkbox {
-  background-color: var(----purple);
+input[type="checkbox"]:checked + .modal-checkbox-wrapper > .custom-checkbox {
+  border-color: transparent;
+  background-color: #404bbf;
   border: none;
+  fill: #f4f4fd;
 }
 
 input:checked + label .custom-checkbox .icon-checkbox {
