--- a/css/style.css
+++ b/css/style.css
@@ -669,8 +669,8 @@ p {
   height: 100%;
   inset: 0;
   z-index: 2;
-  opacity: 0;
-  visibility: hidden;
+  /* opacity: 0;
+  visibility: hidden; */
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -712,6 +712,7 @@ p {
 
 .modal-close:hover {
   background-color: #404bbf;
+  color: #ffffff;
   border: none;
 }
 
@@ -722,6 +723,13 @@ p {
 
 .icon-modal-close {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close:hover .icon-modal-close {
+  fill: #ffffff;
+}
+
+.icon-modal-close {
+  fill: rgb(46, 47, 66);
 }
 
 .icon-modal-close:hover {
