--- a/css/style.css
+++ b/css/style.css
@@ -712,7 +712,7 @@ p {
 
 .modal-close:hover {
   background-color: #404bbf;
-  color: #ffffff;
+  fill: #ffffff;
   border: none;
 }
 
@@ -729,6 +729,8 @@ p {
 }
 
 .icon-modal-close {
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: fill;
   fill: rgb(46, 47, 66);
 }
 
@@ -812,6 +814,7 @@ p {
   height: 120px;
   color: rgba(46, 47, 66, 0.4);
   border: 1px solid rgba(46, 47, 66, 0.4);
+  border-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: transparent;
   font-size: 12px;
   padding: 8px 16px;
@@ -827,13 +830,7 @@ p {
   border-color: #4d5ae5;
 }
 
-.modal-form input:focus,
-.modal-form textarea:focus {
-  border-color: #007bff;
-}
-
 .modal-checkbox-wrapper {
-  display: flex;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
