--- a/css/style.css
+++ b/css/style.css
@@ -814,7 +814,7 @@ p {
   height: 120px;
   color: rgba(46, 47, 66, 0.4);
   border: 1px solid rgba(46, 47, 66, 0.4);
-  border-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: transparent;
   font-size: 12px;
   padding: 8px 16px;
