--- a/css/style.css
+++ b/css/style.css
@@ -669,8 +669,8 @@ p {
   height: 100%;
   inset: 0;
   z-index: 2;
-  /* opacity: 0;
-  visibility: hidden; */
+  opacity: 0;
+  visibility: hidden;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
