--- a/css/style.css
+++ b/css/style.css
@@ -671,10 +671,17 @@ p {
   z-index: 2;
   opacity: 0;
   visibility: hidden;
+  pointer-events: none;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 
 .modal {
@@ -811,6 +818,14 @@ p {
 
 .modal-form-input:focus + .icon-modal {
   fill: #4d5ae5;
+}
+
+.modal-close:focus + .icon-modal {
+  fill: #ffffff;
+}
+
+.modal-close:hover + .icon-modal {
+  fill: #ffffff;
 }
 
 .modal-textarea-wrapper {
