--- a/css/style.css
+++ b/css/style.css
@@ -678,7 +678,7 @@ p {
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop.is-open {
+.is-hidden {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
