--- a/css/style.css
+++ b/css/style.css
@@ -677,7 +677,6 @@ p {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .modal {
   position: absolute;
   top: 50%;
@@ -685,6 +684,7 @@ p {
   min-height: 584px;
   background: #fcfcfc;
   padding: 72px 24px 24px 24px;
+  pointer-events: none;
   width: 408px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -733,6 +733,21 @@ p {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition-property: fill;
   fill: rgb(46, 47, 66);
+}
+
+.icon-modal-close:hover {
+  fill: #ffffff;
+}
+.icon-modal-close:focus {
+  fill: #ffffff;
+}
+
+.modal-form-input:focus + .icon-modal {
+  fill: #ffffff;
+}
+
+.modal-form-input:hover + .icon-modal {
+  fill: #ffffff;
 }
 
 .modal-text {
