--- a/css/style.css
+++ b/css/style.css
@@ -684,7 +684,6 @@ p {
   min-height: 584px;
   background: #fcfcfc;
   padding: 72px 24px 24px 24px;
-  pointer-events: none;
   width: 408px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -719,6 +718,7 @@ p {
 
 .modal-close:focus {
   background-color: #404bbf;
+  fill: #ffffff;
   border: none;
 }
 
@@ -732,7 +732,6 @@ p {
 .icon-modal-close {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition-property: fill;
-  fill: rgb(46, 47, 66);
 }
 
 .icon-modal-close:hover {
@@ -742,12 +741,9 @@ p {
   fill: #ffffff;
 }
 
-.modal-form-input:focus + .icon-modal {
-  fill: #ffffff;
-}
-
-.modal-form-input:hover + .icon-modal {
-  fill: #ffffff;
+.is-hidden {
+  visibility: hidden;
+  pointer-events: none;
 }
 
 .modal-text {
