--- a/css/style.css
+++ b/css/style.css
@@ -665,18 +665,25 @@ p {
 
 .backdrop {
   position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
   width: 100%;
   height: 100%;
-  inset: 0;
-  z-index: 2;
+  background-color: rgba(46, 47, 66, 0.4);
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  height: 100%;
-  background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
 .modal {
   position: absolute;
   top: 50%;
@@ -712,13 +719,11 @@ p {
 
 .modal-close:hover {
   background-color: #404bbf;
-  fill: #ffffff;
   border: none;
 }
 
 .modal-close:focus {
   background-color: #404bbf;
-  fill: #ffffff;
   border: none;
 }
 
@@ -739,11 +744,6 @@ p {
 }
 .icon-modal-close:focus {
   fill: #ffffff;
-}
-
-.is-hidden {
-  visibility: hidden;
-  pointer-events: none;
 }
 
 .modal-text {
